# SimpleLinearNDInterpolator

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
include/: SimpleLinearNDInterpolator.h
scripts/: generate_scipy_test.py
src/: SimpleLinearNDInterpolator.cpp
tests/: CMakeLists.txt  generated_scipy_compat_test.cpp  test_1d_interpolation.cpp  test_degeneracy_fallback.cpp  test_nearest_neighbor_fallback.cpp  test_simple_linear_nd_interpolator.cpp
